--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NEXO - Componentes de PC y Periféricos</title>
+  <title>NEXO - Componentes de PC y Perifericos</title>
   <script src="https://cdn.tailwindcss.com"></script> <!-- Tailwind CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> <!-- Iconos -->
   <link rel="shortcut icon" href="./img/favicon.ico"/>
@@ -28,7 +28,7 @@
         <img src="./img/logo.png" alt="logo" class="h-[50px] md:h-[100px]">
       </a>
 
-      <!-- Barra de búsqueda -->
+      <!-- Barra de busqueda -->
       <div class="w-full md:w-1/3 mx-4">
         <div class="relative">
           <input type="text" placeholder="¿Qué estás buscando?"
