navbar modelo 2.0 - banner - img categorias

--- a/index.html
+++ b/index.html
@@ -10,65 +10,65 @@
 </head>
 <body class="bg-gray-100">
 
-  <!-- Banner superior -->
-<div class="bg-violet-800 text-white text-xs sm:text-sm py-2">
-  <div class="container mx-auto flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6 text-center md:text-left">
-    <span><i class="fas fa-credit-card mr-1"></i> 6 Cuotas sin interes</span>
-    <span><i class="fas fa-truck mr-1"></i> Envios a todo el Pais</span>
-    <span><i class="fas fa-percentage mr-1"></i> 20% de Descuento pagando con transferencia</span>
+    <!-- Banner superior -->
+  <div class="bg-violet-800 text-white text-xs sm:text-sm py-2">
+    <div class="container mx-auto flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6 text-center md:text-left">
+      <span>6 Cuotas sin interés 💳 // Envios a todo el Pais🚗 // 20% de Descuento pagando con transferencia 📲</span>
+    </div>
   </div>
-</div>
 
-<!-- Header -->
-<header class="bg-black shadow-sm">
-  <div class="container mx-auto px-4 py-4">
-    <div class="flex justify-between items-center">
-      <!-- Logo -->
-      <a href="#">
-        <img src="./img/logo.png" alt="logo" class="h-[50px] md:h-[100px]">
+  <!-- Header -->
+  <header class="bg-gray-800 shadow-sm py-4 px-4 md:px-[100px]">
+    <div class="flex items-center justify-between gap-4">
+      
+      <!-- Logo  -->
+      <a href="#" class="flex-shrink-0">
+        <img src="./img/logo.png" alt="logo" class="h-[40px] md:h-[70px]">
       </a>
 
-      <!-- Barra de busqueda -->
-      <div class="w-full md:w-1/3 mx-4">
+      <!-- Barra de búsqueda  -->
+      <div class="flex-1 max-w-xl mx-6">
         <div class="relative">
-          <input type="text" placeholder="¿Qué estás buscando?"
-                 class="w-full px-3 py-2 border border-gray-300 rounded-lg text-black 
-                        focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm md:text-base">
-          <button class="absolute right-0 top-0 h-full px-3 text-gray-500">
-            🔍
+          <input type="text" placeholder="¿Qué estás buscando?" 
+            class="w-full px-4 py-2 border border-gray-300 rounded-lg text-black 
+                  focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm md:text-base">
+          <button class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
+            <i class="fas fa-search"></i>
           </button>
         </div>
       </div>
 
-      <!-- Acciones de usuario (desktop) -->
-      <div class="hidden md:flex space-x-4">
-        <button class="flex items-center text-white font-medium hover:text-violet-600">
-          <!-- Icono persona -->
-          <i class="fas fa-user mr-2"></i>
-          Crear cuenta
-        </button>
-        <button class="flex items-center text-white font-medium hover:text-violet-600">
-          <i class="fas fa-user mr-2"></i>
-          Iniciar sesión
-        </button>
+      <!-- Acciones -->
+      <div class="hidden md:flex items-center space-x-6 text-white font-medium">
+        <a href="#" class="hover:text-violet-500 flex items-center">
+          <i class="fas fa-question-circle mr-2"></i> Ayuda
+        </a>
+        <a href="#" class="hover:text-violet-500 flex items-center">
+          <i class="fas fa-user mr-2"></i> Iniciar sesión
+        </a>
+        <a href="#" class="hover:text-violet-500 flex items-center relative">
+          <i class="fas fa-shopping-cart text-xl"></i>
+          <span class="absolute -top-2 -right-3 bg-red-600 text-white text-xs font-bold px-2 py-0.5 rounded-full">0</span>
+        </a>
       </div>
 
-      <!-- Botón hamburguesa (mobile) -->
-      <div class="md:hidden flex items-center">
-        <button id="menu-btn" class="text-white focus:outline-none">
+      <!-- Hamburguesa + carrito en mobile -->
+      <div class="flex md:hidden items-center space-x-4 text-white">
+        <button id="menu-btn" class="focus:outline-none">
           <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
+        <button>
+          <i class="fas fa-shopping-cart text-xl"></i>
+        </button>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-
-  <!-- Navegación desktop -->
-  <nav class="bg-black text-white border-t border-gray-700 hidden md:block">
+  <!-- Navegacion desktop -->
+  <nav class="bg-gray-800 text-white border-t border-gray-700 hidden md:block">
     <div class="container mx-auto px-4">
       <ul class="flex justify-center items-center space-x-8 py-4">
         <li class="px-2 font-bold text-lg uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Todos los productos</li>
@@ -80,20 +80,17 @@
     </div>
   </nav>
 
-  <!-- Menú Mobile -->
-  <div id="mobile-overlay"
-    class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden">
+  <!-- Menu Mobile -->
+  <div id="mobile-overlay" class="fixed inset-0 bg-gray-800 bg-opacity-50 z-40 hidden">
   </div>
 
-  <div id="mobile-menu"
-       class="fixed inset-0 bg-black text-white w-3/4 max-w-xs transform -translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col">
-    
-    <!-- Botón cerrar -->
+  <div id="mobile-menu" class="fixed inset-0 bg-gray-800 text-white w-3/4 max-w-xs transform -translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col">
+    <!-- Boton cerrar -->
     <div class="flex justify-end p-4">
       <button id="close-btn" class="text-white text-2xl">X</button>
     </div>
 
-    <!-- Items menú -->
+    <!-- Items menu -->
     <nav class="flex flex-col text-left text-md font-normal flex-1">
       <a href="#" class="py-3 border-t border-gray-700 px-4">Todos los productos</a>
       <a href="#" class="py-3 border-t border-gray-700 px-4">Notebooks</a>
@@ -103,7 +100,7 @@
     </nav>
 
     <!-- Seccion login / cuenta Mobile -->
-    <div class="bg-gray-800 text-md flex justify-around py-3">
+    <div class="bg-gray-900 text-md flex justify-around py-3">
       <!-- Icono persona -->
       <i class="fas fa-user mr-1 flex items-center"></i>
       <a href="#" class="flex items-center space-x-2 text-white hover:text-violet-500">
@@ -113,8 +110,60 @@
         <span>Iniciar sesión</span>
       </a>
     </div>
-</div>
+  </div>
 
+  <main>
+    <!-- Imagenes Categorias -->
+  <section class="container mx-auto px-4 py-10">
+    <!-- Grid de imágenes -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+
+      <!-- Tarjeta 1 -->
+      <a href="#" class="block rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+        <div class="overflow-hidden">
+          <img src="./img/notebook.png" alt="Notebook" class="w-full h-auto object-cover transform transition duration-500 hover:scale-110">
+        </div>
+      </a>
+
+      <!-- Tarjeta 2 -->
+      <a href="#" class="block rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+        <div class="overflow-hidden">
+          <img src="./img/monitores.png" alt="PC Gamer" class="w-full h-auto object-cover transform transition duration-500 hover:scale-110">
+        </div>
+      </a>
+
+      <!-- Tarjeta 3 -->
+      <a href="#" class="block rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+        <div class="overflow-hidden">
+          <img src="./img/pcensamblada.png" alt="Monitor" class="w-full h-auto object-cover transform transition duration-500 hover:scale-110">
+        </div>
+      </a>
+    </div>
+  </section>
+
+  <!-- Banner Zowie -->
+  <section class="w-full">
+    <div class="overflow-hidden rounded-2xl">
+      <a href="#" class="block transform transition duration-500 hover:scale-105 rounded-2xl shadow-lg">
+
+        <picture>
+          <!-- Imagen para mobile -->
+          <source media="(max-width: 640px)" srcset="./img/banner-mobile.png">
+
+          <!-- Banner Desktop -->
+          <img src="./img/ZOWIE-banner.png" alt="Banner" class="w-full h-auto max-h-[500px] object-cover bg-black">
+        </picture>
+
+      </a>
+    </div>
+  </section>
+
+  </main>
+
+
+  <footer>
+
+  </footer>
   <script src="./js/script.js"></script>
 </body>
 </html>
