arreglo imagenes carousel producto destacados

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="swiper-slide">
               <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 border border-gray-100 min-h-[450px]">
                 <div class="overflow-hidden">
-                  <img src="./img/assets/productos/computadoras/MonitorAsus.webp" alt="Monitor Asus TUF gaming" class="w-full h-72 object-cover hover:scale-105 transition-transform duration-300">
+                  <img src="./img/assets/productos/computadoras/MonitorAsus.webp" alt="Monitor Asus TUF gaming" class="w-full h-72 object-contain hover:scale-105 transition-transform duration-300">
                 </div>
                 <div class="p-6 flex-grow">
                   <h3 class="text-lg font-semibold text-gray-800 mb-2">Monitor Asus TUF 24' 180hz</h3>
@@ -194,7 +194,7 @@
             <div class="swiper-slide">
               <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 border border-gray-100 min-h-[450px]">
                 <div class="overflow-hidden">
-                  <img src="./img/assets/productos/computadoras/MonitorGigabyte.webp" alt="Monitor Gigabyte gaming" class="w-full h-72 object-cover hover:scale-105 transition-transform duration-300">
+                  <img src="./img/assets/productos/computadoras/MonitorGigabyte.webp" alt="Monitor Gigabyte gaming" class="w-full h-72 object-contain hover:scale-105 transition-transform duration-300">
                 </div>
                 <div class="p-6 flex-grow">
                   <h3 class="text-lg font-semibold text-gray-800 mb-2">Monitor Gamer Gigabyte 25" 200Hz</h3>
@@ -211,7 +211,7 @@
             <div class="swiper-slide">
               <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 border border-gray-100 min-h-[450px]">
                 <div class="overflow-hidden">
-                  <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook Acer"" class="w-full h-72 object-cover hover:scale-105 transition-transform duration-300">
+                  <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook Acer"" class="w-full h-72 object-contain hover:scale-105 transition-transform duration-300">
                 </div>
                 <div class="p-6 flex-grow">
                   <h3 class="text-lg font-semibold text-gray-800 mb-2">Notebook Acer Aspire 3 i5</h3>
@@ -228,7 +228,7 @@
             <div class="swiper-slide">
               <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 border border-gray-100 min-h-[450px]">
                 <div class="overflow-hidden">
-                  <img src="./img/assets/productos/computadoras/NotebookAsus.webp" alt="Notebook Gamer Asus TUF" class="w-full h-72 object-cover hover:scale-105 transition-transform duration-300">
+                  <img src="./img/assets/productos/computadoras/NotebookAsus.webp" alt="Notebook Gamer Asus TUF" class="w-full h-72 object-contain hover:scale-105 transition-transform duration-300">
                 </div>
                 <div class="p-6 flex-grow">
                   <h3 class="text-lg font-semibold text-gray-800 mb-2">Notebook Gamer Asus TUF</h3>
@@ -246,7 +246,7 @@
             <div class="swiper-slide">
               <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 border border-gray-100 min-h-[450px]">
                 <div class="overflow-hidden">
-                  <img src="./img/assets/productos/computadoras/NotebookLenovo.webp" alt="Notebook Lenovo LOQ" class="w-full h-72 object-cover hover:scale-105 transition-transform duration-300">
+                  <img src="./img/assets/productos/computadoras/NotebookLenovo.webp" alt="Notebook Lenovo LOQ" class="w-full h-72 object-contain hover:scale-105 transition-transform duration-300">
                 </div>
                 <div class="p-6 flex-grow">
                   <h3 class="text-lg font-semibold text-gray-800 mb-2">Notebook Gamer Lenovo LOQ 15"</h3>
@@ -259,11 +259,11 @@
               </div>
             </div>
 
-            <!-- Producto 6: Auriculares -->
+            <!-- Producto 6: Pc ensamblada -->
             <div class="swiper-slide">
               <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 border border-gray-100 min-h-[450px]">
                 <div class="overflow-hidden">
-                  <img src="./img/assets/productos/computadoras/pcensamblada.webp" alt="PC ensamblada" class="w-full h-72 object-cover hover:scale-105 transition-transform duration-300">
+                  <img src="./img/assets/productos/computadoras/pcensamblada.webp" alt="PC ensamblada" class="w-full h-72 object-contain hover:scale-105 transition-transform duration-300">
                 </div>
                 <div class="p-6 flex-grow">
                   <h3 class="text-lg font-semibold text-gray-800 mb-2">PC Gamer Ensamblada Nexo - Máximo FPS</h3>
