--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div id="mobile-overlay" class="fixed inset-0 bg-gray-800 bg-opacity-50 z-40 hidden">
   </div>
 
-  <div id="mobile-menu" class="fixed inset-0 bg-gray-800 text-white w-3/4 max-w-xs transform -translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col">
+  <div id="mobile-menu" class="fixed inset-y-0 left-0 bg-gray-800 text-white w-3/4 max-w-xs transform -translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col h-full">
     <!-- Boton cerrar -->
     <div class="flex justify-end p-4">
       <button id="close-btn" class="text-white text-2xl">X</button>
@@ -671,7 +671,7 @@
   </main>
 
 
-<footer class="bg-gray-900 text-white py-12 my-[50px 0]">
+<footer class="bg-gray-900 text-white py-12">
   <div class="container mx-auto px-4">
     <!-- Grid Principal-->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
@@ -679,7 +679,7 @@
       <!-- Logo y Descripcion -->
       <div class="lg:col-span-1">
         <a href="#" class="flex items-center mb-4">
-          <img src="./img/logo.png" alt="NEXO" class="h-10 w-auto mr-3 hover:scale-105 transition-transform">
+          <img src="./img/assets/logos/logo.png" alt="NEXO" class="h-10 w-auto mr-3 hover:scale-105 transition-transform">
           <span class="text-xl font-bold text-violet-400">NEXO</span>
         </a>
         <p class="text-gray-300 text-sm leading-relaxed">
