boton top scroll en home

--- a/index.html
+++ b/index.html
@@ -845,6 +845,10 @@
     </div>
   </footer>
 
+  <button id="btnSubir"
+    class="hidden fixed bottom-6 right-6 bg-violet-700 hover:bg-violet-800 text-white p-4 rounded-full shadow-lg transition-all duration-500 transform hover:scale-110 hover:shadow-violet-500/50">
+    <i class="fa-solid fa-arrow-up"></i>
+  </button>
   <script src="./js/script.js"></script>
 </body>
 
