Agregando nuevos html y conexiones

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="flex items-center justify-between gap-4">
 
       <!-- Logo  -->
-      <a href="#" class="flex-shrink-0">
+      <a href="./index.html" class="flex-shrink-0">
         <img src="./img/assets/logos/logo.png" alt="logo" class="h-[40px] md:h-[70px]">
       </a>
 
@@ -74,22 +74,38 @@
   </header>
 
   <!-- Navegacion desktop -->
-  <nav class="bg-gray-800 text-white border-t border-gray-700 hidden md:block">
-    <div class="container mx-auto px-4">
-      <ul class="flex justify-center items-center space-x-8 py-4">
-        <li class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Todos los productos</li>
-        <li class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Notebooks</li>
-        <li class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Monitores</li>
-        <li class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">PC
-          Ensambladas</li>
-        <li class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Personalizar mi PC</li>
-      </ul>
-    </div>
-  </nav>
+<nav class="bg-gray-800 text-white border-t border-gray-700 hidden md:block">
+  <div class="container mx-auto px-4">
+    <ul class="flex justify-center items-center space-x-8 py-4">
+      <li>
+        <a href="./productos.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
+          Todos los productos
+        </a>
+      </li>
+      <li>
+        <a href="./notebooks.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
+          Notebooks
+        </a>
+      </li>
+      <li>
+        <a href="./monitores.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
+          Monitores
+        </a>
+      </li>
+      <li>
+        <a href="./pcsEnsambladas.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
+          PC Ensambladas
+        </a>
+      </li>
+      <li>
+        <a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
+          Personalizar mi PC
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 
   <!-- Menu Mobile -->
   <div id="mobile-overlay" class="fixed inset-0 bg-gray-800 bg-opacity-50 z-40 hidden">
