actualizo sobre nosotros

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </a>
       </li>
       <li>
-        <a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
+        <a href="./componentes.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
           Personalizar mi PC
         </a>
       </li>
@@ -808,6 +808,10 @@
             <div class="flex items-center text-gray-300 text-sm">
               <i class="fas fa-envelope mr-3 text-violet-500"></i>
               <span>info@nexo.com.ar</span>
+            </div>
+            <div class="flex items-center text-gray-300 text-sm">
+              <i class="fas fa-user mr-3 text-violet-500"></i>
+              <a href="./sobreNosotros.html" class="hover:text-violet-400">Sobre Nosotros</a>
             </div>
           </div>
 
