--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -1,278 +1,122 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEXO - Componentes de PC y Perifericos</title>
-    <script src="https://cdn.tailwindcss.com"></script> <!-- Tailwind CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Iconos -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <link rel="shortcut icon" href="./img/assets/logos/favicon.ico" />
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NEXO - Componentes de PC y Periféricos</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <link rel="shortcut icon" href="./img/assets/logos/favicon.ico" />
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="bg-gray-100">
 
-    <!-- Banner superior -->
-    <section class="bg-violet-800 text-white text-xs sm:text-sm py-2">
-        <div
-            class="container mx-auto flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6 text-center md:text-left">
-            <span>6 Cuotas sin interés 💳 // Envios a todo el Pais🚗 // 20% de Descuento pagando con transferencia 📲</span>
+  <!-- Banner superior -->
+  <section class="bg-violet-800 text-white text-xs sm:text-sm py-2">
+    <div class="container mx-auto flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6 text-center md:text-left">
+      <span>6 Cuotas sin interés 💳 // Envíos a todo el País🚗 // 20% de Descuento pagando con transferencia 📲</span>
+    </div>
+  </section>
+
+  <!-- Header -->
+  <header class="bg-gray-800 shadow-sm py-4 px-4 md:px-[100px]">
+    <div class="flex items-center justify-between gap-4">
+      <!-- Logo -->
+      <a href="./index.html" class="flex-shrink-0">
+        <img src="./img/assets/logos/logo.png" alt="logo" class="h-[40px] md:h-[70px]">
+      </a>
+
+      <!-- Barra de búsqueda -->
+      <div class="flex-1 max-w-xl mx-6">
+        <div class="relative">
+          <input type="text" placeholder="¿Qué estás buscando?" class="w-full px-4 py-2 border border-gray-300 rounded-lg text-black focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm md:text-base">
+          <button class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
+            <i class="fas fa-search"></i>
+          </button>
         </div>
-    </section>
+      </div>
 
-    <!-- Header -->
-    <header class="bg-gray-800 shadow-sm py-4 px-4 md:px-[100px]">
-        <div class="flex items-center justify-between gap-4">
+      <!-- Acciones -->
+      <div class="hidden md:flex items-center space-x-6 text-white font-medium">
+        <a href="#" class="hover:text-violet-500 flex items-center">
+          <i class="fas fa-question-circle mr-2"></i> Ayuda
+        </a>
+        <a href="#" class="hover:text-violet-500 flex items-center">
+          <i class="fas fa-user mr-2"></i> Iniciar sesión
+        </a>
+        <a href="#" class="hover:text-violet-500 flex items-center relative">
+          <i class="fas fa-shopping-cart text-xl"></i>
+          <span class="absolute -top-2 -right-3 bg-red-600 text-white text-xs font-bold px-2 py-0.5 rounded-full">0</span>
+        </a>
+      </div>
 
-            <!-- Logo  -->
-            <a href="./index.html" class="flex-shrink-0">
-                <img src="./img/assets/logos/logo.png" alt="logo" class="h-[40px] md:h-[70px]">
-            </a>
-
-            <!-- Barra de busqueda  -->
-            <div class="flex-1 max-w-xl mx-6">
-                <div class="relative">
-                    <input type="text" placeholder="¿Qué estás buscando?" class="w-full px-4 py-2 border border-gray-300 rounded-lg text-black 
-                    focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm md:text-base">
-                    <button class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
-            </div>
-
-            <!-- Acciones -->
-            <div class="hidden md:flex items-center space-x-6 text-white font-medium">
-                <a href="#" class="hover:text-violet-500 flex items-center">
-                    <i class="fas fa-question-circle mr-2"></i> Ayuda
-                </a>
-                <a href="#" class="hover:text-violet-500 flex items-center">
-                    <i class="fas fa-user mr-2"></i> Iniciar sesión
-                </a>
-                <a href="#" class="hover:text-violet-500 flex items-center relative">
-                    <i class="fas fa-shopping-cart text-xl"></i>
-                    <span
-                        class="absolute -top-2 -right-3 bg-red-600 text-white text-xs font-bold px-2 py-0.5 rounded-full">0</span>            
-                </a>
-            </div>
-
-            <!-- Hamburguesa + carrito en mobile -->
-            <div class="flex md:hidden items-center space-x-4 text-white">
-                <button id="menu-btn" class="focus:outline-none">
-                    <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                    </svg>
-                </button>
-                <button>
-                    <i class="fas fa-shopping-cart text-xl"></i>
-                </button>
-            </div>
-        </div>
+      <!-- Hamburguesa + carrito en mobile -->
+      <div class="flex md:hidden items-center space-x-4 text-white">
+        <button id="menu-btn" class="focus:outline-none">
+          <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+        <button>
+          <i class="fas fa-shopping-cart text-xl"></i>
+        </button>
+      </div>
+    </div>
   </header>
 
-  <!-- Navegacion desktop -->
+  <!-- Navegación desktop -->
   <nav class="bg-gray-800 text-white border-t border-gray-700 hidden md:block">
-  <div class="container mx-auto px-4">
-    <ul class="flex justify-center items-center space-x-8 py-4">
-      <li>
-        <a href="./productos.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Todos los productos
-        </a>
-      </li>
-      <li>
-        <a href="./notebooks.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Notebooks
-        </a>
-      </li>
-      <li>
-        <a href="./monitores.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Monitores
-        </a>
-      </li>
-      <li>
-        <a href="./pcsEnsambladas.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          PC Ensambladas
-        </a>
-      </li>
-      <li>
-        <a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Personalizar mi PC
-        </a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-  <!-- Menu Mobile -->
-  <div id="mobile-overlay" class="fixed inset-0 bg-gray-800 bg-opacity-50 z-40 hidden">
-  </div>
-
-  <div id="mobile-menu"
-    class="fixed inset-y-0 left-0 bg-gray-800 text-white w-3/4 max-w-xs transform -translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col h-full">
-    <!-- Boton cerrar -->
-    <div class="flex justify-end p-4">
-      <button id="close-btn" class="text-white text-2xl">X</button>
-    </div>
-
-    <!-- Items menu -->
-    <nav class="flex flex-col text-left text-md font-normal flex-1">
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Todos los productos</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Notebooks</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Monitores</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">PC Ensambladas</a>
-      <a href="#" class="py-3 border-t border-gray-700 px-4">Personalizar mi PC</a>
-    </nav>
-
-    <!-- Seccion login / cuenta Mobile -->
-    <div class="bg-gray-900 text-md flex justify-around py-3">
-      <!-- Icono persona -->
-      <i class="fas fa-user mr-1 flex items-center"></i>
-      <a href="#" class="flex items-center space-x-2 text-white hover:text-violet-500">
-        <span>Crear cuenta</span>
-      </a>
-      <a href="#" class="flex items-center space-x-2 text-white hover:text-violet-500">
-        <span>Iniciar sesión</span>
-      </a>
-    </div>
-  </div>
-  <footer class="bg-gray-900 text-white py-12">
     <div class="container mx-auto px-4">
-      <!-- Grid Principal-->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
+      <ul class="flex justify-center items-center space-x-8 py-4">
+        <li><a href="./productos.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Todos los productos</a></li>
+        <li><a href="./notebooks.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Notebooks</a></li>
+        <li><a href="./monitores.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Monitores</a></li>
+        <li><a href="./pcsEnsambladas.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">PC Ensambladas</a></li>
+        <li><a href="./componentes.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Personalizar mi PC</a></li>
+      </ul>
+    </div>
+  </nav>
 
-        <!-- Logo y Descripcion -->
-        <div class="lg:col-span-1">
-          <a href="#" class="flex items-center mb-4">
-            <img src="./img/assets/logos/logo.png" alt="NEXO"
-              class="h-10 w-auto mr-3 hover:scale-105 transition-transform">
-            <span class="text-xl font-bold text-violet-400">NEXO</span>
-          </a>
-          <p class="text-gray-300 text-sm leading-relaxed">
-            Tu tienda especializada en componentes de PC, notebooks y periféricos. Envíos a todo el país con la mejor
-            calidad y precios competitivos.
-          </p>
-        </div>
+  <!-- Sección Sobre Nosotros -->
+  <section class="container mx-auto px-4 py-16">
+    <h2 class="text-3xl font-bold text-center text-gray-800 mb-10">Sobre Nosotros</h2>
 
-        <!-- Categorias -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Categorías</h3>
-          <ul class="space-y-2">
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-laptop mr-2 text-violet-500"></i>Todos los productos
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-laptop mr-2 text-violet-500"></i>Notebooks
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-desktop mr-2 text-violet-500"></i>Monitores
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-cogs mr-2 text-violet-500"></i>PC Ensambladas
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-tools mr-2 text-violet-500"></i>Personalizar mi PC
-              </a></li>
-          </ul>
-        </div>
+    <p class="text-center text-gray-600 max-w-3xl mx-auto mb-12">
+      Somos un grupo de apasionados por la tecnología que decidió crear <strong>NEXO</strong>, una tienda online dedicada a ofrecer los mejores componentes, periféricos y equipos personalizados.
+      Nuestro objetivo es brindar atención personalizada, precios competitivos y confianza a cada cliente que confía en nosotros.
+    </p>
 
-        <!-- Soporte -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Soporte</h3>
-          <ul class="space-y-2">
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-question-circle mr-2 text-violet-500"></i>Ayuda y FAQs
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-shipping-fast mr-2 text-violet-500"></i>Envíos y Devoluciones
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-credit-card mr-2 text-violet-500"></i>Formas de Pago
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-file-contract mr-2 text-violet-500"></i>Términos y Condiciones
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-shield-alt mr-2 text-violet-500"></i>Política de Privacidad
-              </a></li>
-          </ul>
-        </div>
-
-        <!-- Contacto y Redes -->
-        <div class="lg:col-span-1">
-          <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Contacto</h3>
-          <div class="space-y-3 mb-6">
-            <div class="flex items-center text-gray-300 text-sm">
-              <i class="fas fa-map-marker-alt mr-3 text-violet-500"></i>
-              <span>Av. Corrientes 1234, CABA, Argentina</span>
-            </div>
-            <div class="flex items-center text-gray-300 text-sm">
-              <i class="fas fa-phone mr-3 text-violet-500"></i>
-              <span>+54 11 1234-5678</span>
-            </div>
-            <div class="flex items-center text-gray-300 text-sm">
-              <i class="fas fa-envelope mr-3 text-violet-500"></i>
-              <span>info@nexo.com.ar</span>
-            </div>
-          </div>
-
-          <!-- Redes Sociales -->
-          <h4 class="text-sm font-medium mb-3 text-gray-300">Síguenos</h4>
-          <div class="flex space-x-4">
-            <a href="#"
-              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#"
-              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#"
-              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#"
-              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+      <!-- Persona 1 -->
+      <div class="bg-white p-6 rounded-2xl shadow-md text-center">
+        <img src="./img/assets/nosotros/utri.jpg" alt="Foto 1" class="w-40 h-40 object-cover rounded-full mx-auto mb-4 shadow-md">
+        <h3 class="text-lg font-semibold text-gray-800">Francisco Elisondo</h3>
+        <p class="text-sm text-gray-600 mt-2">Fundador y desarrollador Frontend</p>
       </div>
 
-      <!-- Linea Divisoria -->
-      <hr class="border-gray-700 mb-6">
+      <!-- Persona 2 -->
+      <div class="bg-white p-6 rounded-2xl shadow-md text-center">
+        <img src="./img/assets/nosotros/mateo.jpg" alt="Foto 2" class="w-40 h-40 object-cover rounded-full mx-auto mb-4 shadow-md">
+        <h3 class="text-lg font-semibold text-gray-800">Mateo Torres</h3>
+        <p class="text-sm text-gray-600 mt-2">Especialista en Hardware</p>
+      </div>
 
-      <!-- Copyright y Pagos -->
-      <div class="flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
-        <p>&copy; 2024 NEXO - Componentes de PC y Periféricos. Todos los derechos reservados.</p>
-
-        <!-- Iconos de Pagos -->
-        <div class="flex items-center space-x-4 mt-4 md:mt-0">
-          <span class="text-xs mr-4">Pagos aceptados:</span>
-          <a href="#" class="hover:scale-110 transition-transform">
-            <i class="fab fa-cc-visa text-2xl text-blue-500"></i>
-          </a>
-          <a href="#" class="hover:scale-110 transition-transform">
-            <i class="fab fa-cc-mastercard text-2xl text-red-500"></i>
-          </a>
-          <a href="#" class="hover:scale-110 transition-transform">
-            <i class="fas fa-credit-card text-2xl text-gray-300"></i>
-          </a>
-          <a href="#" class="hover:scale-110 transition-transform">
-            <i class="fas fa-mobile-alt text-2xl text-green-500"></i> <!-- Mercado Pago-->
-          </a>
-        </div>
+      <!-- Persona 3 -->
+      <div class="bg-white p-6 rounded-2xl shadow-md text-center">
+        <img src="./img/assets/nosotros/facu.jpg" alt="Foto 3" class="w-40 h-40 object-cover rounded-full mx-auto mb-4 shadow-md">
+        <h3 class="text-lg font-semibold text-gray-800">Facundo Oyola</h3>
+        <p class="text-sm text-gray-600 mt-2">Atención al cliente y soporte técnico</p>
       </div>
     </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-gray-400 text-center py-6 mt-16">
+    <p>&copy; 2024 NEXO - Componentes de PC y Periféricos. Todos los derechos reservados.</p>
   </footer>
 
-  <button id="btnSubir"
-    class="hidden fixed bottom-6 right-6 bg-violet-700 hover:bg-violet-800 text-white p-4 rounded-full shadow-lg transition-all duration-500 transform hover:scale-110 hover:shadow-violet-500/50">
-    <i class="fa-solid fa-arrow-up"></i>
-  </button>
-  <script src="./js/script.js"></script>
 </body>
-
 </html>
