--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <li>
           <a href="./componentes.html"
             class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-            Personalizar mi PC
+            Sobre Nosotros
           </a>
         </li>
       </ul>
