--- a/notebooks.html
+++ b/notebooks.html
@@ -99,7 +99,7 @@
       </li>
       <li>
         <a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Personalizar mi PC
+          Sobre Nosotros
         </a>
       </li>
     </ul>
@@ -172,7 +172,7 @@
     </aside>
 
     <!-- Main content -->
-    <main class="w-full md:w-4/5">
+    <main class="w-full md:w-4/5 mb-16">
 
       <!-- Filtro superior -->
       <div class="flex justify-end mb-4">
@@ -185,122 +185,98 @@
       <div class="flex flex-wrap md:flex-wrap md:gap-[6px]">
 
         <!-- Tarjeta Producto -->
-        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200 group">
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
             <!-- Imagen -->
-            <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook"
-                  class="w-full h-auto object-cover transform transition duration-500 group-hover:scale-105">
-
-          <!-- Botón que aparece al pasar el cursor -->
-            <a href="#" 
-              class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
-              <button class="bg-white text-black font-semibold py-2 px-6 rounded-full shadow-md hover:bg-gray-200 transition">Ver</button>
-            </a>
+            <img src="./img/assets/productos/notebooks/notebook-kelyx-ryzen3-3200U-8gb.jpg" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
 
           <!-- Texto debajo -->
           <div class="p-4 text-center">
-            <p class="font-bold text-gray-800">
+            <p class="font-bold text-gray-800 mb-2">
               Notebook Kelyx 15.6" FHD AMD Ryzen 3-3200U 8Gb M.2 256Gb
             </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$500,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
           </div>
         </div>
 
         <!-- Tarjeta Producto -->
-        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200 group">
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
             <!-- Imagen -->
-            <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook"
-                  class="w-full h-auto object-cover transform transition duration-500 group-hover:scale-105">
-
-          <!-- Botón que aparece al pasar el cursor -->
-            <a href="#" 
-              class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
-              <button class="bg-white text-black font-semibold py-2 px-6 rounded-full shadow-md hover:bg-gray-200 transition">Ver</button>
-            </a>
+            <img src="./img/assets/productos/notebooks/notebook-Asus-R7-7735hs-16gb-512gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
 
           <!-- Texto debajo -->
           <div class="p-4 text-center">
-            <p class="font-bold text-gray-800">
-              Notebook Kelyx 15.6" FHD AMD Ryzen 3-3200U 8Gb M.2 256Gb
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook ASUS 15.6 R7-7735HS 16GB 512GB PCIE RTX4050
             </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,950,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
           </div>
         </div>
 
         <!-- Tarjeta Producto -->
-        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200 group">
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
             <!-- Imagen -->
-            <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook"
-                  class="w-full h-auto object-cover transform transition duration-500 group-hover:scale-105">
-
-          <!-- Botón que aparece al pasar el cursor -->
-            <a href="#" 
-              class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
-              <button class="bg-white text-black font-semibold py-2 px-6 rounded-full shadow-md hover:bg-gray-200 transition">Ver</button>
-            </a>
+            <img src="./img/assets/productos/notebooks/notebook-Dell-i5-1335U-8gb-256gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
 
           <!-- Texto debajo -->
           <div class="p-4 text-center">
-            <p class="font-bold text-gray-800">
-              Notebook Kelyx 15.6" FHD AMD Ryzen 3-3200U 8Gb M.2 256Gb
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook DELL 14 LATI 5440 I5-1335U 8GB 256GB W11PRO
             </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,000,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
           </div>
         </div>
 
         <!-- Tarjeta Producto -->
-        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200 group">
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
             <!-- Imagen -->
-            <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook"
-                  class="w-full h-auto object-cover transform transition duration-500 group-hover:scale-105">
-
-          <!-- Botón que aparece al pasar el cursor -->
-            <a href="#" 
-              class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
-              <button class="bg-white text-black font-semibold py-2 px-6 rounded-full shadow-md hover:bg-gray-200 transition">Ver</button>
-            </a>
+            <img src="./img/assets/productos/notebooks/nootebok-Asus-i5-12500H-16gb-512gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
 
           <!-- Texto debajo -->
           <div class="p-4 text-center">
-            <p class="font-bold text-gray-800">
-              Notebook Kelyx 15.6" FHD AMD Ryzen 3-3200U 8Gb M.2 256Gb
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook ASUS 15.6 I5-12500H 16GB 512GB PCIE RTX3050
             </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,200,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
           </div>
         </div>
 
         <!-- Tarjeta Producto -->
-        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200 group">
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
             <!-- Imagen -->
-            <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook"
-                  class="w-full h-auto object-cover transform transition duration-500 group-hover:scale-105">
-
-          <!-- Botón que aparece al pasar el cursor -->
-            <a href="#" 
-              class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
-              <button class="bg-white text-black font-semibold py-2 px-6 rounded-full shadow-md hover:bg-gray-200 transition">Ver</button>
-            </a>
+            <img src="./img/assets/productos/notebooks/notebook-Asus-i3-1220p-8gb-256gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
 
           <!-- Texto debajo -->
           <div class="p-4 text-center">
-            <p class="font-bold text-gray-800">
-              Notebook Kelyx 15.6" FHD AMD Ryzen 3-3200U 8Gb M.2 256Gb
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook ASUS 15.6 I3-1220P 8GB 256GB PCIE
             </p>
+           <p class="text-lg font-bold text-violet-600 mb-4">$700,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
           </div>
         </div>
 
         <!-- Tarjeta Producto -->
-        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200 group">
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
             <!-- Imagen -->
-            <img src="./img/assets/productos/computadoras/NotebookAcer.webp" alt="Notebook"
-                  class="w-full h-auto object-cover transform transition duration-500 group-hover:scale-105">
-
-          <!-- Botón que aparece al pasar el cursor -->
-            <a href="#" 
-              class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
-              <button class="bg-white text-black font-semibold py-2 px-6 rounded-full shadow-md hover:bg-gray-200 transition">Ver</button>
-            </a>
+            <img src="./img/assets/productos/notebooks/notebook-Lenovo-r7-7730u-8gb-512gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
 
           <!-- Texto debajo -->
           <div class="p-4 text-center">
-            <p class="font-bold text-gray-800">
-              Notebook Kelyx 15.6" FHD AMD Ryzen 3-3200U 8Gb M.2 256Gb
+            <p class="font-bold text-gray-800 mb-2">
+              NOTEBOOK LENOVO AMD R7 7730U 8GB 512GB 15.6 FULL HD
             </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,460,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
           </div>
         </div>
 
@@ -440,12 +416,3 @@
       </div>
     </div>
   </footer>
-
-  <button id="btnSubir"
-    class="hidden fixed bottom-6 right-6 bg-violet-700 hover:bg-violet-800 text-white p-4 rounded-full shadow-lg transition-all duration-500 transform hover:scale-110 hover:shadow-violet-500/50">
-    <i class="fa-solid fa-arrow-up"></i>
-  </button>
-  <script src="./js/script.js"></script>
-</body>
-
-</html>
