--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -75,7 +75,7 @@
         <li><a href="./notebooks.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Notebooks</a></li>
         <li><a href="./monitores.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Monitores</a></li>
         <li><a href="./pcsEnsambladas.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">PC Ensambladas</a></li>
-        <li><a href="./componentes.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Personalizar mi PC</a></li>
+        <li><a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">Sobre Nosotros</a></li>
       </ul>
     </div>
   </nav>
