--- a/componentes.html
+++ b/componentes.html
@@ -99,7 +99,7 @@
       </li>
       <li>
         <a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Personalizar mi PC
+          Sobre Nosotros
         </a>
       </li>
     </ul>
@@ -173,7 +173,7 @@
                 <i class="fas fa-cogs mr-2 text-violet-500"></i>PC Ensambladas
               </a></li>
             <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-tools mr-2 text-violet-500"></i>Personalizar mi PC
+                <i class="fas fa-tools mr-2 text-violet-500"></i>Sobre Nosotros
               </a></li>
           </ul>
         </div>
