--- a/productos.html
+++ b/productos.html
@@ -99,7 +99,7 @@
       </li>
       <li>
         <a href="./sobreNosotros.html" class="px-2 font-bold text-sm uppercase cursor-pointer hover:scale-110 transition hover:text-violet-600">
-          Personalizar mi PC
+          Sobre Nosotros
         </a>
       </li>
     </ul>
@@ -138,6 +138,344 @@
       </a>
     </div>
   </div>
+
+    <!-- Breadcrumb -->
+  <nav class="text-sm text-gray-500 px-6 py-4">
+    <a href="./index.html" class="hover:text-gray-700">Inicio</a> >
+    <span class="text-gray-700 font-medium">Notebooks</span>
+  </nav>
+
+  <div class="flex flex-col md:flex-row px-6">
+
+    <!-- Sidebar -->
+    <aside class="w-full md:w-1/5 mb-6 md:mb-0 md:pr-8">
+      <h2 class="text-xl font-bold mb-4">Notebooks</h2>
+
+      <h3 class="text-lg font-semibold mb-2">Filtrar por</h3>
+      <div class="mb-6">
+        <h4 class="font-medium mb-2">Marca</h4>
+        <div class="space-y-1">
+          <label class="flex items-center space-x-2"><input type="checkbox"> <span>Asus</span></label>
+          <label class="flex items-center space-x-2"><input type="checkbox"> <span>Dell</span></label>
+          <label class="flex items-center space-x-2"><input type="checkbox"> <span>HP</span></label>
+          <label class="flex items-center space-x-2"><input type="checkbox"> <span>Lenovo</span></label>
+          <label class="flex items-center space-x-2"><input type="checkbox"> <span>MSI</span></label>
+        </div>
+      </div>
+
+      <h4 class="font-medium mb-2">Precio</h4>
+      <div class="flex items-center space-x-2">
+        <input type="number" placeholder="Desde" class="w-20 border rounded p-1 text-sm">
+        <input type="number" placeholder="Hasta" class="w-20 border rounded p-1 text-sm">
+        <button class="bg-gray-200 rounded p-1 hover:bg-gray-300">→</button>
+      </div>
+    </aside>
+
+    <!-- Main content -->
+    <main class="w-full md:w-4/5 mb-16">
+
+      <!-- Filtro superior -->
+      <div class="flex justify-end mb-4">
+        <select class="border rounded p-2 text-sm">
+          <option>Precio: Mayor a Menor</option>
+          <option>Precio: Menor a Mayor</option>
+        </select>
+      </div>
+
+      <div class="flex flex-wrap md:flex-wrap md:gap-[6px]">
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/PC-i5-14400f-rx-7600-xt-32gb-1tb.png" alt="PC-i5-14400f-rx-7600-xt-32gb-1tb"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              PC Gamer | i5 14400f RX 7600 XT 16Gb B760 32Gb Ram DDR4 1TB NVMe 650w 80plus CoolerCPU Dedicado Gabinete Gamer
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,500,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/PC-Ryzen-55600x-32gb-1tb.png" alt="PC-Ryzen-55600x-32gb-1tb"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              PC Gamer | Ryzen 5 5600x RX9060XT 8Gb B550 32Gb Ram 1TB NVMe 650w 80plus Gabinete Gamer
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,385,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/PC-Ryzen55600x-rx7600Xt-32gb-1tb.png" alt="PC-Ryzen-55600x-32gb-1tb"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              PC Gamer | Ryzen 5 5600x RX7600XT 16Gb B550 32Gb Ram 1TB NVMe 650w 80plus Gabinete Gamer
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,375,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/PC-Ryzen57600x-rx770xt-32gb-1tb.png" alt="PC-Ryzen57600x-rx770xt-32gb-1tb"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              PC Gamer | Ryzen 5 7600x RX 7700 XT 12Gb B650 32Gb Ram 1TB NVMe CPUCooler Dedicado 750w 80plus Gabinete Gamer
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,820,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/PC-Ryzen57600x-rx9060xt-16gb-32gb-1tb.png" alt="PC-Ryzen57600x-rx9060xt-16gb-32gb-1tb"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              PC Gamer | Ryzen 5 7600x RX 9060 XT 16Gb B650 32Gb Ram DDR5 1TB NVMe CoolerCPU Dedicado 750w 80+ Gold Gabinete Gamer
+            </p>
+           <p class="text-lg font-bold text-violet-600 mb-4">$1,840,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/PC-i512400f-rx9060xt-16gb-1tb.png" alt="PC-i512400f-rx9060xt-16gb-1tb"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              PC Gamer | i5 12400f RX 9060 XT 8Gb B760 16Gb Ram 1TB NVMe 650w 80plus Gabinete Gamer
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,400,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/notebooks/notebook-kelyx-ryzen3-3200U-8gb.jpg" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook Kelyx 15.6" FHD AMD Ryzen 3-3200U 8Gb M.2 256Gb
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$500,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/notebooks/notebook-Asus-R7-7735hs-16gb-512gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook ASUS 15.6 R7-7735HS 16GB 512GB PCIE RTX4050
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,950,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/notebooks/notebook-Dell-i5-1335U-8gb-256gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook DELL 14 LATI 5440 I5-1335U 8GB 256GB W11PRO
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,000,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/notebooks/nootebok-Asus-i5-12500H-16gb-512gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook ASUS 15.6 I5-12500H 16GB 512GB PCIE RTX3050
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,200,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/notebooks/notebook-Asus-i3-1220p-8gb-256gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Notebook ASUS 15.6 I3-1220P 8GB 256GB PCIE
+            </p>
+           <p class="text-lg font-bold text-violet-600 mb-4">$700,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/notebooks/notebook-Lenovo-r7-7730u-8gb-512gb.png" alt="Notebook"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              NOTEBOOK LENOVO AMD R7 7730U 8GB 512GB 15.6 FULL HD
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$1,460,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/Monitor-Valkyrie-24.png" alt="Monitor-Valkyrie-24"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Monitor Gamer Valkyrie 24" 1080p 200hz 1ms Ips G Sync Hdr Vh2410v2
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$200,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/Monitor-Valkyrie-27.png" alt="Monitor-Valkyrie-27"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Monitor Gamer | Valkyrie 27" QHD VH2714 200hz 1ms
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$290,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/Monitor-AOC-310hz.png" alt="Monitor-AOC-310hz"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Monitor Gamer AOC 310Hz 24.5'' 25G4S
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$360,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/Monitor-LG-27.png" alt="Monitor-LG-27"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Monitor LG 27 Gamer 27GS75Q-B IPS QHD 200 Hz
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$472,800</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/Monitor-LG-24-100hz.png" alt="Monitor-LG-24-100hz"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Monitor LG 24 LED 24MS500 BORDERLESS 100 Hz (II)
+            </p>
+           <p class="text-lg font-bold text-violet-600 mb-4">$700,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+        <!-- Tarjeta Producto -->
+        <div class="relative w-80 md:w-96 rounded-3xl shadow-lg overflow-hidden border-4 border-gray-200">
+            <!-- Imagen -->
+            <img src="./img/assets/productos/computadoras/Monitor-ZOWIE-144hz.png" alt="Monitor-ZOWIE-144hz"
+                  class="w-full h-auto object-cover transform transition duration-500 hover:scale-105 cursor-pointer">
+
+          <!-- Texto debajo -->
+          <div class="p-4 text-center">
+            <p class="font-bold text-gray-800 mb-2">
+              Monitor 24 Gamer ZOWIE XL2411K LED TN FHD 144hz Tecnología DyAc Black eQualizer
+            </p>
+            <p class="text-lg font-bold text-violet-600 mb-4">$500,000</p>
+            <button class="bg-violet-600 text-white font-semibold py-2 px-4 rounded-full shadow-md hover:bg-violet-700 transition">Añadir al carrito</button>
+          </div>
+        </div>
+
+      </div>
+
+    </main>
+  </div>
+
   <footer class="bg-gray-900 text-white py-12">
     <div class="container mx-auto px-4">
       <!-- Grid Principal-->
