linkee un par de cosas

--- a/index.html
+++ b/index.html
@@ -848,21 +848,18 @@
         <div>
           <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Categorías</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+            <li><a href="./productos.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
                 <i class="fas fa-laptop mr-2 text-violet-500"></i>Todos los productos
               </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+            <li><a href="./notebooks.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
                 <i class="fas fa-laptop mr-2 text-violet-500"></i>Notebooks
               </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+            <li><a href="./monitores.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
                 <i class="fas fa-desktop mr-2 text-violet-500"></i>Monitores
               </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+            <li><a href="./pcsEnsambladas.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
                 <i class="fas fa-cogs mr-2 text-violet-500"></i>PC Ensambladas
-              </a></li>
-            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                <i class="fas fa-tools mr-2 text-violet-500"></i>Personalizar mi PC
-              </a></li>
+              </a>
           </ul>
         </div>
 
