--- a/notebooks.html
+++ b/notebooks.html
@@ -272,138 +272,135 @@
 
 
     <footer class="bg-gray-900 text-white py-12">
-        <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
+    <div class="container mx-auto px-4">
+      <!-- Grid Principal-->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
 
-                <div class="lg:col-span-1">
-                    <a href="#" class="flex items-center mb-4">
-                        <img src="./img/assets/logos/logo.png" alt="NEXO"
-                            class="h-10 w-auto mr-3 hover:scale-105 transition-transform">
-                        <span class="text-xl font-bold text-violet-400">NEXO</span>
-                    </a>
-                    <p class="text-gray-300 text-sm leading-relaxed">
-                        Tu tienda especializada en componentes de PC, notebooks y periféricos. Envíos a todo el país con
-                        la mejor
-                        calidad y precios competitivos.
-                    </p>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Categorías
-                    </h3>
-                    <ul class="space-y-2">
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-laptop mr-2 text-violet-500"></i>Todos los productos
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-laptop mr-2 text-violet-500"></i>Notebooks
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-desktop mr-2 text-violet-500"></i>Monitores
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-cogs mr-2 text-violet-500"></i>PC Ensambladas
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-tools mr-2 text-violet-500"></i>Personalizar mi PC
-                            </a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Soporte
-                    </h3>
-                    <ul class="space-y-2">
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-question-circle mr-2 text-violet-500"></i>Ayuda y FAQs
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-shipping-fast mr-2 text-violet-500"></i>Envíos y Devoluciones
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-credit-card mr-2 text-violet-500"></i>Formas de Pago
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-file-contract mr-2 text-violet-500"></i>Términos y Condiciones
-                            </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
-                                <i class="fas fa-shield-alt mr-2 text-violet-500"></i>Política de Privacidad
-                            </a></li>
-                    </ul>
-                </div>
-
-                <div class="lg:col-span-1">
-                    <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Contacto
-                    </h3>
-                    <div class="space-y-3 mb-6">
-                        <div class="flex items-center text-gray-300 text-sm">
-                            <i class="fas fa-map-marker-alt mr-3 text-violet-500"></i>
-                            <span>Av. Corrientes 1234, CABA, Argentina</span>
-                        </div>
-                        <div class="flex items-center text-gray-300 text-sm">
-                            <i class="fas fa-phone mr-3 text-violet-500"></i>
-                            <span>+54 11 1234-5678</span>
-                        </div>
-                        <div class="flex items-center text-gray-300 text-sm">
-                            <i class="fas fa-envelope mr-3 text-violet-500"></i>
-                            <span>info@nexo.com.ar</span>
-                        </div>
-                    </div>
-
-                    <h4 class="text-sm font-medium mb-3 text-gray-300">Síguenos</h4>
-                    <div class="flex space-x-4">
-                        <a href="#"
-                            class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <hr class="border-gray-700 mb-6">
-
-            <div class="flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
-                <p>&copy; 2024 NEXO - Componentes de PC y Periféricos. Todos los derechos reservados.</p>
-
-                <div class="flex items-center space-x-4 mt-4 md:mt-0">
-                    <span class="text-xs mr-4">Pagos aceptados:</span>
-                    <a href="#" class="hover:scale-110 transition-transform">
-                        <i class="fab fa-cc-visa text-2xl text-blue-500"></i>
-                    </a>
-                    <a href="#" class="hover:scale-110 transition-transform">
-                        <i class="fab fa-cc-mastercard text-2xl text-red-500"></i>
-                    </a>
-                    <a href="#" class="hover:scale-110 transition-transform">
-                        <i class="fas fa-credit-card text-2xl text-gray-300"></i>
-                    </a>
-                    <a href="#" class="hover:scale-110 transition-transform">
-                        <i class="fas fa-mobile-alt text-2xl text-green-500"></i> </a>
-                </div>
-            </div>
+        <!-- Logo y Descripcion -->
+        <div class="lg:col-span-1">
+          <a href="#" class="flex items-center mb-4">
+            <img src="./img/assets/logos/logo.png" alt="NEXO"
+              class="h-10 w-auto mr-3 hover:scale-105 transition-transform">
+            <span class="text-xl font-bold text-violet-400">NEXO</span>
+          </a>
+          <p class="text-gray-300 text-sm leading-relaxed">
+            Tu tienda especializada en componentes de PC, notebooks y periféricos. Envíos a todo el país con la mejor
+            calidad y precios competitivos.
+          </p>
         </div>
-    </footer>
+
+        <!-- Categorias -->
+        <div>
+          <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Categorías</h3>
+          <ul class="space-y-2">
+            <li><a href="./productos.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-laptop mr-2 text-violet-500"></i>Todos los productos
+              </a></li>
+            <li><a href="./notebooks.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-laptop mr-2 text-violet-500"></i>Notebooks
+              </a></li>
+            <li><a href="./monitores.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-desktop mr-2 text-violet-500"></i>Monitores
+              </a></li>
+            <li><a href="./pcsEnsambladas.html" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-cogs mr-2 text-violet-500"></i>PC Ensambladas
+              </a>
+          </ul>
+        </div>
+
+        <!-- Soporte -->
+        <div>
+          <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Soporte</h3>
+          <ul class="space-y-2">
+            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-question-circle mr-2 text-violet-500"></i>Ayuda y FAQs
+              </a></li>
+            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-shipping-fast mr-2 text-violet-500"></i>Envíos y Devoluciones
+              </a></li>
+            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-credit-card mr-2 text-violet-500"></i>Formas de Pago
+              </a></li>
+            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-file-contract mr-2 text-violet-500"></i>Términos y Condiciones
+              </a></li>
+            <li><a href="#" class="text-gray-300 hover:text-violet-400 transition-colors text-sm flex items-center">
+                <i class="fas fa-shield-alt mr-2 text-violet-500"></i>Política de Privacidad
+              </a></li>
+          </ul>
+        </div>
+
+        <!-- Contacto y Redes -->
+        <div class="lg:col-span-1">
+          <h3 class="text-lg font-semibold mb-4 text-white border-b-2 border-violet-600 pb-2 w-fit">Contacto</h3>
+          <div class="space-y-3 mb-6">
+            <div class="flex items-center text-gray-300 text-sm">
+              <i class="fas fa-map-marker-alt mr-3 text-violet-500"></i>
+              <span>Av. Corrientes 1234, CABA, Argentina</span>
+            </div>
+            <div class="flex items-center text-gray-300 text-sm">
+              <i class="fas fa-phone mr-3 text-violet-500"></i>
+              <span>+54 11 1234-5678</span>
+            </div>
+            <div class="flex items-center text-gray-300 text-sm">
+              <i class="fas fa-envelope mr-3 text-violet-500"></i>
+              <span>info@nexo.com.ar</span>
+            </div>
+            <div class="flex items-center text-gray-300 text-sm">
+              <i class="fas fa-user mr-3 text-violet-500"></i>
+              <a href="./sobreNosotros.html" class="hover:text-violet-400">Sobre Nosotros</a>
+            </div>
+          </div>
+
+          <!-- Redes Sociales -->
+          <h4 class="text-sm font-medium mb-3 text-gray-300">Síguenos</h4>
+          <div class="flex space-x-4">
+            <a href="#"
+              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#"
+              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#"
+              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#"
+              class="w-10 h-10 bg-violet-600 hover:bg-violet-500 rounded-full flex items-center justify-center text-white transition-all duration-300 hover:scale-110 shadow-lg">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Linea Divisoria -->
+      <hr class="border-gray-700 mb-6">
+
+      <!-- Copyright y Pagos -->
+      <div class="flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
+        <p>&copy; 2024 NEXO - Componentes de PC y Periféricos. Todos los derechos reservados.</p>
+
+        <!-- Iconos de Pagos -->
+        <div class="flex items-center space-x-4 mt-4 md:mt-0">
+          <span class="text-xs mr-4">Pagos aceptados:</span>
+          <a href="#" class="hover:scale-110 transition-transform">
+            <i class="fab fa-cc-visa text-2xl text-blue-500"></i>
+          </a>
+          <a href="#" class="hover:scale-110 transition-transform">
+            <i class="fab fa-cc-mastercard text-2xl text-red-500"></i>
+          </a>
+          <a href="#" class="hover:scale-110 transition-transform">
+            <i class="fas fa-credit-card text-2xl text-gray-300"></i>
+          </a>
+          <a href="#" class="hover:scale-110 transition-transform">
+            <i class="fas fa-mobile-alt text-2xl text-green-500"></i> <!-- Mercado Pago-->
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
     <div id="mini-cart"
         class="fixed inset-y-0 right-0 bg-white w-full max-w-xs md:max-w-md transform translate-x-full transition-transform duration-300 ease-in-out z-50 flex flex-col h-full shadow-2xl">
